src/AntiDupl/AntiDupl.h

    typedef adInt32 adBool;
    typedef adBool* adBoolPtr;
    typedef size_t adSize;
    typedef adSize* adSizePtr;
    typedef void* adEngineHandle;
    typedef wchar_t adCharW;
    typedef adPathW* adPathPtrW;
	typedef adPathWSF* adPathWSFPtr;
    typedef adStatistic* adStatisticPtr;
    typedef adStatusW* adStatusPtrW;
    typedef adImageInfoW* adImageInfoPtrW;
    typedef adResultW* adResultPtrW;
	typedef adGroup* adGroupPtr;
    typedef adBitmap* adBitmapPtr;
    DLLAPI adEngineHandle adCreateW(const adCharW * userPath);
    DLLAPI adError adRelease(adEngineHandle handle);
	DLLAPI adError adStop(adEngineHandle handle);
    DLLAPI adError adSearch(adEngineHandle handle);
    DLLAPI adError adLoadW(adEngineHandle handle, adFileType fileType, const adCharW* fileName, adBool check);
    DLLAPI adError adSaveW(adEngineHandle handle, adFileType fileType, const adCharW* fileName);
    DLLAPI adError adClear(adEngineHandle handle, adFileType fileType);
	DLLAPI adError adPathWithSubFolderSetW(adEngineHandle handle, adPathType pathType, adPathWSFPtr pPaths, adSize pathSize);
    DLLAPI adError adPathGetW(adEngineHandle handle, adPathType pathType, adPathPtrW pPath, adSizePtr pPathSize);
    DLLAPI adError adStatisticGet(adEngineHandle handle, adStatisticPtr pStatistic);
    DLLAPI adError adStatusGetW(adEngineHandle handle, adThreadType threadType, adSize threadId, adStatusPtrW pStatus);
    DLLAPI adError adResultGetW(adEngineHandle handle, adSizePtr pStartFrom, adResultPtrW pResult, adSizePtr pResultSize);
    DLLAPI adError adResultSort(adEngineHandle handle, adSortType sortType, adBool increasing);
    DLLAPI adError adResultApply(adEngineHandle handle, adGlobalActionType globalActionType);
    DLLAPI adError adResultApplyTo(adEngineHandle handle, adLocalActionType localActionType, adTargetType targetType);
    DLLAPI adError adCanApply(adEngineHandle handle, adActionEnableType actionEnableType, adBoolPtr pEnable);
    DLLAPI adError adRenameCurrentW(adEngineHandle handle, adRenameCurrentType renameCurrentType, const adCharW* newFileName);
	DLLAPI adError adMoveCurrentGroupW(adEngineHandle handle, const adCharW* directory);
	DLLAPI adError adRenameCurrentGroupAsW(adEngineHandle handle, const adCharW* fileName);
    DLLAPI adError adSelectionSet(adEngineHandle handle, adSizePtr pStartFrom, adSize size, adBool value);
    DLLAPI adError adSelectionGet(adEngineHandle handle, adSizePtr pStartFrom, adBoolPtr pSelection, adSizePtr pSelectionSize);
    DLLAPI adError adCurrentSet(adEngineHandle handle, adSize index);
    DLLAPI adError adCurrentGet(adEngineHandle handle, adSizePtr pIndex);
	DLLAPI adError adGroupGet(adEngineHandle handle, adSizePtr pStartFrom, adGroupPtr pGroup, adSizePtr pGroupSize);
	DLLAPI adError adImageInfoGetW(adEngineHandle handle, adSize groupId, adSizePtr pStartFrom, adImageInfoPtrW pImageInfo, adSizePtr pImageInfoSize);
	DLLAPI adError adImageInfoSelectionSet(adEngineHandle handle, adSize groupId, adSize index, adSelectionType selectionType);
	DLLAPI adError adImageInfoSelectionGet(adEngineHandle handle, adSize groupId, adSizePtr pStartFrom, adBoolPtr pSelection, adSizePtr pSelectionSize);
	DLLAPI adError adImageInfoRenameW(adEngineHandle handle, adSize groupId, adSize index, const adCharW* newFileName);
    DLLAPI adError adLoadBitmapW(adEngineHandle handle, const adCharW* fileName, adBitmapPtr pBitmap);